classDiagram
    %% BaseEntity for UUID and audit fields
    class BaseEntity {
        -id: UUID
        -created_at: datetime
        -updated_at: datetime
    }

    %% User
    class User {
        -first_name: str
        -last_name: str
        -email: str
        -password: str
        -is_admin: bool
        +register(): void
        +update_profile(): void
        +delete(): void
    }

    %% Place
    class Place {
        -title: str
        -description: str
        -price: float
        -latitude: float
        -longitude: float
        +create(): void
        +update(): void
        +delete(): void
        +list(): List<Place>
    }

    %% Review
    class Review {
        -rating: int
        -comment: str
        +create(): void
        +update(): void
        +delete(): void
        +list_by_place(place_id: UUID): List<Review>
    }
        -name: str
        -description: str
        +create(): void
        +update(): void
        +delete(): void
        +list(): List<Amenity>
    }

    %% Inheritance
    User --|> BaseEntity
    Place --|> BaseEntity
    Review --|> BaseEntity
    Amenity --|> BaseEntity

    %% Relationships
    User "1" -- "0..*" Place : owns >
    Place "1" -- "0..*" Review : receives >
    User "1" -- "0..*" Review : writes >
    Place "1" -- "0..*" Amenity : has >